# agent-template

./: .gitignore  IMPLEMENTATION_GUIDE.md  LICENSE  QUICKSTART.md  README.md  STREAMING_PROTOCOL.md  STRUCTURE.md
backend/: .env.example  .gitignore  README.md  pyproject.toml  test_dashscope.py
backend/src/: config.py  main.py
backend/src/agent/: __init__.py  agent.py  tools.py
backend/src/api/routes/: __init__.py  chat.py  session.py  upload.py
backend/src/db/: __init__.py  base.py  session.py
backend/src/models/: __init__.py  schema.py
backend/src/models/db/: __init__.py  base.py  file.py  message.py  session.py
backend/src/services/: __init__.py  chat_service.py
backend/src/utils/: __init__.py  logger.py  streaming_engine.py
backend/tests/: __init__.py  test_chat_api.py  test_streaming_engine.py
frontend/: .env.example  README.md  package-lock.json  package.json
frontend/__tests__/: messageStreamHandler.test.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: ChatInterface.tsx  DataFrameViewer.tsx  ThinkingCollapse.tsx  ToolCallDisplay.tsx
frontend/types/: index.ts
frontend/utils/: messageStreamHandler.ts
tests/: README.md  bvt.py
